@@ -5,4 +5,4 @@ COPY . /app
 
 
 # ENTRYPOINT ["java","-XX:+UseZGC","-XX:ErrorFile=/config/hs_err_pid%p.log","-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=/config/heap.hprof","-XX:NativeMemoryTracking=detail" ,"-jar", "/app/server-release.jar"]
-ENTRYPOINT ["java","-XX:+UseZGC", "-jar", "/app/server-release.jar"]
+ENTRYPOINT ["java", "-jar", "/app/server-release.jar"]
